@@ -4,6 +4,9 @@ Sun Dec  5 18:09:36 CET 1999 Wichert Akkerman <wakkerma@debian.org>
     cleanup-info and dpkg-divert
   * New dpkg-scansources from Roderick to allow trailing blanks on lines
   * Correct generation of manual-version
+  * Merge patch from Richard Kettlewell <rjk@sfere.greenend.org.uk> to
+    eliminate string copies while reading .list files
+  * Fix earlier translation-patch for dselect so it builds again
 
 Sat Dec  4 04:22:49 CET 1999 Wichert Akkerman <wakkerma@debian.org>
 
